@@ -1,3 +1,6 @@
+* Tue Jun 04 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 7.3.0-0
+- Add v2 compliance_markup data
+
 * Wed Apr 10 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 7.2.1-0
 - Fixed ordering issue between the kernel module loading for 
   iptables and the service being started
